<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ironsight.wpplugin.macroMachine</groupId>
    <artifactId>Macro-Machine-Plugin</artifactId>
    <version>0.4.2</version>

    <repositories>
        <repository>
            <id>oss.sonatype.org-snapshot</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>sonatype-nexus-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
    </repositories>

    <parent>
        <groupId>org.pepsoft.worldpainter</groupId>
        <artifactId>PluginParent</artifactId>
        <version>1.9.0</version>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <build>

        <outputDirectory>target/classes</outputDirectory>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>org.ironsight.wpplugin.macromachine.properties</include>
                    <include>org.pepsoft.worldpainter.plugins</include>
                </includes>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>org.ironsight.wpplugin.macromachine.properties</exclude>
                    <exclude>org.pepsoft.worldpainter.plugins</exclude>
                </excludes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.flowpowered</groupId>
            <artifactId>flow-noise</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.0</version>  <!-- Use the latest version -->
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.pepsoft.worldpainter/WPCore -->
        <dependency>
            <groupId>org.pepsoft.worldpainter</groupId>
            <artifactId>WPCore</artifactId>
            <version>2.26.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.pepsoft.worldpainter/WPDynmapPreviewer -->
        <dependency>
            <groupId>org.pepsoft.worldpainter</groupId>
            <artifactId>WPDynmapPreviewer</artifactId>
            <version>2.26.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.pepsoft.worldpainter</groupId>
            <artifactId>WPGUI</artifactId>
            <version>2.26.0</version>
        </dependency>
    </dependencies>

    <profiles>
        <!-- Enable this profile and execute the test phase in order to run your plugin with WorldPainter. -->
        <profile>
            <id>testWithWorldPainter</id>
            <dependencies>
                <!-- https://mvnrepository.com/artifact/org.pepsoft.worldpainter/WPGUI -->
                <dependency>
                    <groupId>org.pepsoft.worldpainter</groupId>
                    <artifactId>WPGUI</artifactId>
                    <version>2.26.0</version>
                    <scope>compile</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>test</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <!-- Uncomment this to enable debugging. Change suspend=n to suspend=y if you want to debug plugin loading or initialisation: -->
                                <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005</argument>
                                <argLine>-ea</argLine>
                                <argLine>-Dsun.awt.disablegrab=true</argLine>
                                <!-- These exports are needed from Java 9+ to make the JIDE GUI framework work: -->
                                <argument>--add-exports</argument>
                                <argument>java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.desktop/javax.swing.plaf.synth=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.desktop/sun.awt.shell=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.desktop/sun.swing=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.desktop/sun.awt=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.desktop/sun.awt.windows=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.desktop/sun.awt.image=ALL-UNNAMED</argument>
                                <argument>--add-exports</argument>
                                <argument>java.base/sun.security.action=ALL-UNNAMED</argument>
                                <argument>org.pepsoft.worldpainter.Main</argument>
                            </arguments>
                        </configuration>
                    </plugin>

                    <!-- Copy WPGUI into target/lib -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <version>3.6.1</version>
                        <executions>
                            <execution>
                                <id>copy-wpgui</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>copy-dependencies</goal>
                                </goals>
                                <configuration>
                                    <includeArtifactIds>WPGUI</includeArtifactIds>
                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                    <overWriteReleases>true</overWriteReleases>
                                    <overWriteSnapshots>true</overWriteSnapshots>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>
</project>